--- a/themes/elby/assets/css/text.css
+++ b/themes/elby/assets/css/text.css
@@ -1,15 +1,3 @@
-:root {
-     --is-font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    --is-header-line-height: 80%;
-    --xsmall-text: 2vh;
-    --small-text: 3vh;
-    --medium-text: 4vh;
-    --large-text: 4.5vh;
-    --xlarge-text: 5vh;
-    --xxlarge-text: 6.5vh;
-    --xxxlarge-text: 8vh;
-}
-
 /* Text Size */
 .xs {
     font-size: var(--xsmall-text);
